# shihan-mcp

./: .env.example  .gitignore  04-21-2304-demo_scroll.md  04-22-0026-demo_scroll.md  04-22-0034-test_scroll.md  04-22-0035-test_scroll.md  README.md  atomic_agents_within_agent_blogpost.txt  install_shihan.sh  ninjascroll.sh  pong.py  pushover_test.py  pyproject.toml  shihan_creation.txt  shihan_hook.sh  test_pager.py  test_plan_critic.py  test_shihan_direct.py
.scrolls/: 04-21-2104-page-test-alert-(priority-0).md  04-21-2104-page-test-alert-(priority-1).md  04-21-2104-page-test-alert-(priority-2).md  04-21-2105-page-error-detected-in-training-log.md  04-21-2105-page-plan-critique-45-100.md  04-21-2105-test-scroll.md  04-22-0242-04-22-0242-widen-paddle.md  04-22-0300-04-22-0300-triple-paddle-width.md  04-22-0302-04-22-0302-triple-paddle-width-cycle.md  04-22-0312-04-22-0312-auto-triple-paddle-cycle.md  04-22-0335-04-22-0335-remove-ninja-cycle-script.md  04-22-0336-04-22-0336-slow-ball-speed.md  04-22-0337-04-22-0337-slow-ball-speed.md  04-22-0338-04-22-0338-slow-ball-speed.md  04-22-0339-04-22-0339-forbidden-fallback.md  04-22-0349-04-22-0349-add-scoreboard.md  04-22-0350-add-scoreboard.md  04-22-0358-game-over-on-miss.md
examples/: graphite_example.py  hayato_integration.py  ide_integration.md  lint_agent_example.py  metric_drift_example.py  sse_gateway_example.py  sse_server.py
git-hooks/: pre-commit
shihan_mcp/: __init__.py  config.py  server.py
shihan_mcp/agents/: lint_agent.py  watchdog_agent.py
test_files/: test_violations.py
tests/: test_shihan.py
(+5 files in other folders)
